Chuc nang dang ky

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="title_reg">Đăng ký</string>
     <string name="title_noti">Thông báo</string>
     <string name="title_favorite">Danh sách mong muốn</string>
+    <string name="title_fill_all">Cần điền tất cả các mục</string>
     <string name="title_order_list">Đơn hàng của tôi</string>
     <string name="title_settings">Cài đặt</string>
     <string name="title_privacy">Chính sách</string>
@@ -19,10 +20,19 @@
     <string name="title_close">Đống</string>
     <string name="title_facebook">Facebook</string>
     <string name="title_google">Google</string>
+    <string name="title_recv_email">Tôi muốn nhận các khuyến mãi đọc quyền qua email</string>
     <string name="title_alternative_login">Hoặc đăng nhập bằng</string>
+    <string name="title_alternative_reg">Hoặc đăng ký bằng</string>
     <string name="title_forget_password">Quên mật khẩu?</string>
+    <string name="title_password_require">Mật khẩu phải bao gồm 6 ký tự và 1 chữ hoa</string>
+    <string name="title_lazada_require">Tôi đã hiểu rõ các điều khoản bảo mật của Lazada</string>
     <string name="hint_email">Địa chỉ email</string>
     <string name="hint_password">Mật khẩu</string>
+    <string name="hint_re_password">Nhập lại mật khẩu</string>
+    <string name="hint_full_name">Họ tên đầy đủ</string>
+    <string name="error_re_password">Mật khẩu nhập lại không đúng.</string>
+    <string name="msg_reg_success">Đăng ký thành công</string>
+    <string name="msg_reg_fail">Đăng ký thất bại</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
